# advent_of_code_2015_rust

./: .gitignore  Cargo.toml  README.md
src/: days.rs  lib.rs
src/days/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs
tests/: day01_test.rs  day02_test.rs  day03_test.rs  day04_test.rs  day08_test.rs
