[package]
name = "aoc2015"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
nom = { version = "7.1.1" }
md5 = { version = "0.7.0" }
bit-vec = { version = "0.6.3" }
array2d = { version = "0.3.0" }
